updated tut-style.css to not conflict with other flexsliders
git-svn-id: https://plugins.svn.wordpress.org/think-up-testimonials/tags/1.1@1203991 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/tut-style.css
+++ b/css/tut-style.css
@@ -9,7 +9,7 @@
  *
  */
 
-.flexslider .slides {
+#thinkup-testimonials .flexslider .slides {
   padding: 3rem 3rem 0;
 }
 
@@ -22,7 +22,7 @@
   padding-right: 10%;
 }
 
-.flex-direction-nav a {
+#thinkup-testimonials .flex-direction-nav a {
   top: 35%;
   height: 60px;
 }
